--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -231,6 +231,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="14dp"
                 android:layout_marginLeft="14dp"
+                android:layout_marginTop="14dp"
                 android:alpha="0.9"
                 android:gravity="bottom|start"
                 android:text="00:00"
@@ -238,6 +239,7 @@
                 android:textSize="60sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="HardcodedText"
                 tools:layout_constraintHorizontal_bias="0.5" />
 
