--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,14 +65,14 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/main_bottom_shader"
+            android:id="@+id/settings_appearance_ambient_card_bottom_shader"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/bg_bottom_gradient"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/main_bottom_container">
+            app:layout_constraintTop_toTopOf="@+id/settings_appearance_ambient_card_bottom_container">
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -80,6 +80,7 @@
             android:id="@+id/main_refresh_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/bg_round_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -88,7 +89,6 @@
                 android:id="@+id/main_refresh_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_24"
                 android:padding="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -101,6 +101,7 @@
             android:id="@+id/main_top_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/main_top_shader"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -144,12 +145,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#8000"
-            app:layout_constraintBottom_toTopOf="@+id/main_bottom_container"
+            app:layout_constraintBottom_toTopOf="@+id/settings_appearance_ambient_card_bottom_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/main_bottom_container"
+            android:id="@+id/settings_appearance_ambient_card_bottom_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -170,11 +171,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="14dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/main_text_main"
+                    app:layout_constraintStart_toEndOf="@+id/settings_appearance_ambient_card_text_main"
                     app:srcCompat="@drawable/baseline_bedtime_24" />
 
                 <TextView
-                    android:id="@+id/main_text_main"
+                    android:id="@+id/settings_appearance_ambient_card_text_main"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
