--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,12 +33,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.cardview.widget.CardView
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/settings_main_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/gray_2"
-                    app:cardCornerRadius="24dp"
+                    android:background="@drawable/bg_round_g2_24"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -46,8 +45,13 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/settings_about_container"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="48dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="48dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginRight="24dp"
+                        android:layout_marginBottom="24dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +60,7 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/settings_about_brief"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +99,7 @@
                             <androidx.constraintlayout.widget.ConstraintLayout
                                 android:id="@+id/settings_about_description_container"
                                 android:layout_width="0dp"
-                                android:layout_height="0dp"
+                                android:layout_height="wrap_content"
                                 android:layout_marginStart="12dp"
                                 android:layout_marginLeft="12dp"
                                 app:layout_constraintBottom_toBottomOf="@+id/settings_about_icon_container"
@@ -106,43 +110,30 @@
                                 <TextView
                                     android:id="@+id/settings_about_appname"
                                     android:layout_width="0dp"
-                                    android:layout_height="0dp"
+                                    android:layout_height="wrap_content"
                                     android:gravity="bottom"
                                     android:text="@string/app_name"
                                     android:textColor="@color/white"
-                                    app:autoSizeTextType="uniform"
-                                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout6"
+                                    android:textSize="24sp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toTopOf="parent" />
 
-                                <androidx.constraintlayout.widget.ConstraintLayout
-                                    android:id="@+id/constraintLayout6"
+                                <TextView
+                                    android:id="@+id/settings_about_desc"
                                     android:layout_width="0dp"
-                                    android:layout_height="0dp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="description of app"
+                                    app:autoSizeTextType="uniform"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@id/settings_about_appname">
-
-                                    <TextView
-                                        android:id="@+id/settings_about_desc"
-                                        android:layout_width="0dp"
-                                        android:layout_height="wrap_content"
-                                        android:text="https://github.com/JerryJeffrey/Ambient_Gallery_Canary"
-                                        android:textColor="@color/gray_10"
-                                        app:autoSizeTextType="uniform"
-                                        app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent" />
-
-                                </androidx.constraintlayout.widget.ConstraintLayout>
+                                    app:layout_constraintTop_toBottomOf="@+id/settings_about_appname" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                </androidx.cardview.widget.CardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/settings_main_attach_point"
@@ -168,7 +159,7 @@
             android:id="@+id/settings_main_titlebar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/bg_round_24"
+            android:background="@drawable/bg_round_g2_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -182,6 +173,20 @@
                 android:src="@drawable/baseline_arrow_back_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginRight="48dp"
+                android:gravity="center"
+                android:text="@string/button_settings"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/settings_button_back"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
